# fast.cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  commit_history.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
_maint/: README.md
_maint/scripts/: git_log_recorder.py
docs/: CHECKPOINTS.md  DEPENDENCIES.md  GETTING_STARTED.md  ROADMAP.md
examples/: README.md
fast_cli/: __init__.py  __main__.py  app.py  cli.py  constants.py  file_copy.py  generation_ui.py  github_workflows.py  gitignore.py  output.py  paths.py  precommit.py  project_generation.py  project_setup.py  template_engine.py  user_config.py  validators.py  venv.py
fast_cli/bundled/: __init__.py  git_log_recorder.py
fast_cli/commands/: __init__.py  add_cmd.py  cache_cmd.py  checkpoint_cmd.py  commit_history_setup.py  completion_cmd.py  db_cmd.py  decimate_cmd.py  docs_cmd.py  doctor_cmd.py  generate_cmd.py  misc_cmd.py  project_root.py  tasks_cmd.py
fastx_cli/: __init__.py  __main__.py  app.py  cli.py  constants.py  file_copy.py  generation_ui.py  github_workflows.py  gitignore.py  output.py  paths.py  precommit.py  project_generation.py  project_setup.py  template_engine.py  validators.py  venv.py
fastx_cli/bundled/: git_log_recorder.py
fastx_cli/commands/: __init__.py  add_cmd.py  audit_cmd.py  bench_cmd.py  cache_cmd.py  changelog_cmd.py  checkpoint_cmd.py  commit_history_setup.py  completion_cmd.py  db_cmd.py  decimate_cmd.py  deploy_cmd.py  dev_cmd.py  docs_cmd.py  doctor_cmd.py  env_cmd.py  generate_cmd.py  lint_cmd.py  logs_cmd.py  migrate_cmd.py  misc_cmd.py  mock_cmd.py  project_root.py  routes_cmd.py  scaffold_cmd.py  sdk_cmd.py  tasks_cmd.py  test_cmd.py  upgrade_cmd.py
tests/: conftest.py  test_add_cache_tasks.py  test_additional_units.py  test_basics.py  test_bundled_git_log_recorder.py  test_cache_import_subprocess.py  test_checkpoint_cmd.py  test_commit_history_setup.py  test_constants_paths.py  test_coverage_gaps.py  test_db_commands.py  test_db_exhaustive.py  test_doctor_config_completion.py  test_file_copy_bootstrap_decimate.py  test_final_coverage.py  test_generation_ui.py  test_github_venv_precommit_gitignore.py  test_misc_docs_commands.py  test_project_generation.py  test_project_generation_edges.py  test_smoke_cli.py  test_tasks_subprocess.py  test_template_and_validators.py  test_terminal_output.py
