[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmvc-cli"
dynamic = ["version"]
description = "FastMVC CLI — interactive FastAPI project generator and tooling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Shiv" }]
keywords = ["fastapi", "mvc", "cli", "generator", "fastmvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fast-platform>=1.5.0",
    "fast-middleware>=1.5.0",
    "fast-database>=1.5.0",
    "fast-dashboards>=1.5.0",
    "fast-mvc>=1.4.0",
]

[project.optional-dependencies]
interactive = ["questionary>=2.0"]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "questionary>=2.0",
    "build>=1.2",
    "twine>=5.0",
]
all = [
    "fastmvc-cli[interactive,dev]",
    "fast-platform[all]",
    "fast-middleware",
    "fast-database",
    "fast_dashboards",
    "fast-mvc[all,dev,docs,interactive]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=fast_cli --cov-report=term-missing --cov-fail-under=99"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["fast_cli"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[project.urls]
Homepage = "https://github.com/fastmvc/fast.cli"
Repository = "https://github.com/fastmvc/fast.cli"

[project.scripts]
fast = "fast_cli.app:main"
fast-cli = "fast_cli.app:main"
fastmvc = "fast_cli.app:main"

[tool.hatch.version]
path = "fast_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fast_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyproject.toml",
    "/fast_cli",
    "/README.md",
    "/LICENSE",
    "/requirements.txt",
]
